--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,274 @@
-/* You can add global styles to this file, and also import other style files */
+html, body, .brackets {
+    width: 100%;
+    min-height: 100%;
+    font-family: "Arial", sans-serif;
+    background: lightblue;
+}
+
+textarea{
+    height:90px;
+    resize: none;
+    width: 200px;
+}
+
+.h{
+    background-color: grey;
+    padding-top:50px;
+    padding-bottom:50px;
+    width: 110%;
+    padding-left:35%;
+}
+
+#ltn{
+    vertical-align: top;
+}
+
+#name{
+    width: 260px;
+}
+
+label{
+    width:200px;
+    text-align: left;
+    font-weight: 600;
+}
+
+.brackets{
+    margin-left:120px;
+}
+
+.pre{
+    border: 0;
+    border-bottom: 2px dashed black;
+    margin-left:-120px;
+    position:absolute;
+    height:20px;
+    width:180px;
+    margin-top:-45px;
+}
+
+p{
+    position: absolute;
+    margin-bottom:0px;
+    margin-left:-110px;
+    color: white;
+    background-color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.pe{
+    margin-top:-36px;
+}
+
+.pa{
+    margin-top: 5%;
+}
+
+.pb{
+    margin-top: 1.2%;
+}
+
+.brackets > div {
+    vertical-align: top;
+    clear: both;
+    margin-top: 20px;
+}
+
+.brackets > div > div {
+    float: left;
+    height: 100%;
+}
+
+.brackets > div > div > div {
+    margin: 50px 0;
+}
+
+.brackets div.bracketbox {
+    position: relative;
+    width: 100%; height: 100%;
+    border-top: 2px solid grey;
+    border-right: 2px solid grey;
+    border-bottom: 2px solid grey;
+}
+
+.brackets div.bracketbox > span {
+    position: absolute;
+    left: 40px;
+    font-size: 0.85em;
+
+}
+
+.brackets div.bracketbox > span.info1 {
+    position: absolute;
+    z-index: 1;
+    margin-top: -12px;
+    margin-left:1px;
+    height:31px;
+    width:37px;
+    background-color:#A19797;
+    font-family: "Segoe UI";
+    font-weight:600;
+    font-size:13px;
+    text-align: center;
+    padding-top: 5px;
+}
+
+.brackets div.bracketbox > span.info2 {
+    position: absolute;
+    z-index: 1;
+    bottom: -13px;
+    height:31px;
+    width:37px;
+    background-color:#A19797;
+    font-family: "Segoe UI";
+    font-weight:600;
+    font-size:13px;
+    text-align: center;
+    padding-top: 5px;
+}
+
+.brackets div.bracketbox > span.teama {
+    top: -13.5px;
+    background-color: white;    
+    height:33px;
+    width:144px;
+    border: 1px solid #707070;
+    font-family: "Segoe UI";
+    font-weight:600;
+    font-size:14px;
+    padding-top:5px;
+    padding-left:42px;
+    overflow: hidden;
+}
+
+.brackets div.bracketbox > span.teamb {
+    bottom: -13.5px;
+    background-color: white;
+    border: 1px solid black;
+    height:33px;
+    width:144px;
+    border: 1px solid #707070;
+    font-family: "Segoe UI";
+    font-weight:600;
+    font-size:14px;
+    padding-top:5px;
+    padding-left:42px;
+    overflow: hidden;
+}
+
+.brackets div.bracketbox > span.teamc {
+    bottom: -13.5px;
+    background-color: white;
+    border: 1px solid black;
+    height:33px;
+    width:144px;
+    border: 1px solid #707070;
+    font-family: "Segoe UI";
+    font-weight:600;
+    font-size:14px;
+    padding-top:5px;
+    padding-left:42px;
+}
+
+.brackets > .group2 {
+    height: 260px;
+    width: 30%;
+}
+
+.brackets > .group4 {
+    height: 260px;
+    width: 75%;
+}
+
+.brackets > .group5 {
+    height: 260px;
+    width: 75%;
+}
+
+.brackets > .group2 > div {
+    width: 49%;
+}
+
+.brackets > .group3 {
+    height: 320px;
+    width: 50%;
+}
+
+.brackets > .group3 > div {
+    width: 32.7%;
+}
+
+.brackets > .group4 > div {
+    width: 24.5%;
+}
+
+.brackets > .group5 > div {
+    width: 19.6%;
+}
+
+.brackets > .group6 {
+    height: 2000px;
+}
+
+.brackets > .group6 > div {
+    width: 16.3%;
+}
+
+.brackets > .group7 > div {
+    width: 14.2%;
+}
+
+.brackets > div > .r1 > div {
+    height: 60px;
+}
+
+.brackets > div > .r2 > div {
+    margin: 80px 0 110px 0;
+    height: 110px;
+}
+
+.brackets > div > .r3 > div {
+    margin: 135px 0 220px 0;
+    height: 220px;
+}
+
+.brackets > div > .r4 > div {
+    margin: 250px 0 445px 0;
+    height: 445px;
+}
+
+.brackets > div > .r5 > div {
+    margin: 460px 0 900px 0;
+    height: 900px;
+}
+
+.brackets > div > .r6 > div {
+    margin: 900px 0 0 0;
+    height : 1800px;
+}
+
+.brackets > div > .r7 > div {
+    margin: 1800px 0 0 0;
+}
+
+.brackets div.final > div.bracketbox {
+    border-top: 0px;
+    border-right: 0px;
+    height: 0px;
+}
+
+.brackets > div > .r4 > div.drop {
+    height: 180px;
+    margin-bottom: 0px;
+}
+
+.brackets > div > .r5 > div.final.drop {
+    margin-top: 345px;
+    margin-bottom: 0px;
+    height: 1px;
+}
+
+.brackets > div > div > div:last-of-type {
+    margin-bottom: 0px;
+}
